gcc/testsuite/gcc.dg/noncompile/951123-1.c
struct S { int a; int b[2]; };
struct S x = { 0, [0]; };    /* { dg-error "array index|near|parse|syntax|expected" } */
